<resources>
    <string name="app_name">cs407project</string>
    <string name="shieldNetLink"><a href="https://shield-net.org/">Shield-Net</a></string>
    <string name="cdcLink"><a href="https://www.cdc.gov/coronavirus/2019-ncov/cases-updates/cases-in-us.html">CDC</a></string>
    <string name="whoLink"><a href="https://www.who.int/emergencies/diseases/novel-coronavirus-2019">WHO</a></string>
    <string name="nihLink"><a href="https://www.nih.gov/health-information/coronavirus">NIH</a></string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="login">Login</string>
    <string name="todo">TODO</string>
    <string name="create_account">create account</string>
    <string name="occupation">Occupation</string>
    <string name="last_name">Last Name</string>
    <string name="age">Age</string>
    <string name="first_name">First Name</string>
    <string name="org_name">Organization Name</string>
    <string name="you_have_not_created_a_post_to_request_or_provision_any_ppe">You have not created a post to request or provision any PPE.</string>
    <string name="Phone" />
    <string name="Email" />
    <string name="phone" />
</resources>
