<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResourcesActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/shieldNetImage"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:srcCompat="@drawable/shield_image" />

            <TextView
                android:id="@+id/shieldNetLink"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center"
                android:linksClickable="true"
                android:text="@string/shieldNetLink"
                android:textSize="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/cdcImage"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:srcCompat="@drawable/cdc_image" />

            <TextView
                android:id="@+id/cdcLink"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center"
                android:linksClickable="true"
                android:text="@string/cdcLink"
                android:textSize="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/whoImage"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                app:srcCompat="@drawable/who_image" />

            <TextView
                android:id="@+id/whoLink"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center"
                android:linksClickable="true"
                android:text="@string/whoLink"
                android:textSize="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/nihImage"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:srcCompat="@drawable/nih_image" />

            <TextView
                android:id="@+id/nihLink"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="60dp"
                android:gravity="center"
                android:linksClickable="true"
                android:text="@string/nihLink"
                android:textSize="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>
    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/colorPrimary"
        app:itemIconTint="@android:color/white"
        app:itemTextColor="@android:color/white"
        app:labelVisibilityMode="labeled"
        app:menu="@menu/bottom_navigation_bar" />

</FrameLayout>